--- a/Hnefatafl/Content/Language/English/Menu.xml
+++ b/Hnefatafl/Content/Language/English/Menu.xml
@@ -31,10 +31,10 @@
     <advanced>ADVANCED</advanced>
     <Hnefatafl>Hnefatafl</Hnefatafl>
     <Hnefatafl_Description>> 11x11 Board</Hnefatafl_Description>
+    <Tawlbwrdd>Tawlbwrdd</Tawlbwrdd>
+    <Tawlbwrdd_Description>> 11x11 Board</Tawlbwrdd_Description>
     <Tablut>Tablut</Tablut>
     <Tablut_Description>> 9x9 Board</Tablut_Description>
-    <TablutCentre>Tablut C.</TablutCentre>
-    <TablutCentre_Description>> 9x9 Board</TablutCentre_Description>
     <Brandubh>Brandubh</Brandubh>
     <Brandubh_Description>> 7x7 Board</Brandubh_Description>
     <ArdRi>Ard Ri</ArdRi>
